Discord Webhook fine tuning